--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,13 +19,17 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.14.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -54,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.14",
     "tailwindcss": "^3.4.14"
   }
 }
