--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/EesaraMegasooriya/Event-Management-System",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -34,8 +35,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
+    "start-frontend": "react-scripts start",
+    "build": "react-scripts build && (cd ../backend && npm install)",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -59,6 +62,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.14",
+    "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.14"
   }
 }
