--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1",
+    "mongoose": "^8.8.1"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -25,4 +30,4 @@
     "url": "https://github.com/EesaraMegasooriya/Event-Management-System/issues"
   },
   "homepage": "https://github.com/EesaraMegasooriya/Event-Management-System#readme"
-}}
+}
