--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
   "bugs": {
     "url": "https://github.com/EesaraMegasooriya/Event-Management-System/issues"
   },
-  "homepage": "https://github.com/EesaraMegasooriya/Event-Management-System#readme"
+  "homepage": "https://github.com/EesaraMegasooriya/Event-Management-System"
 }
