--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://eesara2002:eesara123@cluster0.ydr7e.mongodb.net/emevents?retryWrites=true&w=majority&appName=Cluster0
 
 PORT=5001
+NODE_ENV=production
