--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/EesaraMegasooriya/Event-Management-System",
+  "homepage": "https://em-events.herokuapp.com",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
