Update frontend build

--- a/backend/package.json
+++ b/backend/package.json
@@ -36,5 +36,5 @@
   "bugs": {
     "url": "https://github.com/EesaraMegasooriya/Event-Management-System/issues"
   },
-  "homepage": "https://github.com/EesaraMegasooriya/Event-Management-System"
+  "homepage": "https://em-events.herokuapp.com"
 }
