Update frontend build

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 MONGO_URI=mongodb+srv://eesara2002:eesara123@cluster0.ydr7e.mongodb.net/emevents?retryWrites=true&w=majority&appName=Cluster0
+REACT_APP_API_URL=https://em-events-802d77926c0b.herokuapp.com
 
 PORT=5001
 NODE_ENV=production
